[gd_scene load_steps=11 format=3 uid="uid://c5848wl82w3i5"]

[ext_resource type="Script" path="res://headphones_screen.gd" id="1_x1l12"]
[ext_resource type="Texture2D" uid="uid://5s3t0l8qtsw4" path="res://assets/img/bgblue.png" id="2_b1iay"]
[ext_resource type="FontFile" uid="uid://d34r571kljcgx" path="res://assets/fonts/AGoblinAppears-o2aV.ttf" id="3_a7srf"]
[ext_resource type="Shader" path="res://Shaders/crt.gdshader" id="4_q4e6u"]
[ext_resource type="Texture2D" uid="uid://ct7cd0ndqhkkb" path="res://art/headphones-temp.png" id="4_yf2k1"]

[sub_resource type="Animation" id="Animation_py5if"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ds1wv"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_x0xva"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_46lyc"]
_data = {
"RESET": SubResource("Animation_py5if"),
"fade_in": SubResource("Animation_ds1wv"),
"fade_out": SubResource("Animation_x0xva")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qi3dv"]
shader = ExtResource("4_q4e6u")
shader_parameter/crt_brightness = 1.0
shader_parameter/crt_ghost = 3.0
shader_parameter/crt_grid = 0.4

[node name="HeadphonesScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x1l12")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1282.0
offset_bottom = 721.0
texture = ExtResource("2_b1iay")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 112.0
offset_right = 1281.0
offset_bottom = 399.0
theme_override_fonts/font = ExtResource("3_a7srf")
theme_override_font_sizes/font_size = 44
text = "THIS GAME IS BEST PLAYED WITH 

HEADPHONES"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_46lyc")
}

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HoldTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -285.0
offset_right = 75.0
offset_bottom = -141.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_yf2k1")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_qi3dv")
anchors_preset = -1
anchor_left = -1.27
anchor_top = -1.676
anchor_right = 3.911
anchor_bottom = 4.344
offset_left = -34.4
offset_top = 281.72
offset_right = -116.912
offset_bottom = 281.76
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -25.0
offset_top = -19.0
offset_right = 1308.0
offset_bottom = 752.0
texture = ExtResource("2_b1iay")

[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
[connection signal="timeout" from="HoldTimer" to="." method="_on_hold_timer_timeout"]
